--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
     </head>
 
     <body>
+        <h1>Play connect 4!</h1>
+        <h2>Click on one of the circles to place a coin there.</h2>
         <div>
-            <div class="coin">
+            <div class="blue coin">
             </div>
-             <div class="coin">
+             <div class="blue coin">
             </div>
-             <div class="coin">
+             <div class="blue coin">
+            </div>
+              <div class="red coin">
+            </div>
+             <div class="red coin">
+            </div>
+             <div class="red coin">
             </div>
             <img src="connect4.png">
         </div>
