--- a/index.html
+++ b/index.html
@@ -9,22 +9,102 @@
     </head>
 
     <body>
-        <h1>Play connect 4!</h1>
-        <h2>Click on one of the circles to place a coin there.</h2>
-        <div>
-            <div class="blue coin">
+        <div class="info">
+            <h1>Play connect 4</h1>
+            <h2>Click on one of the circles to place a coin there.</h2>
+            <h3>Get four in a row of the same colour to win!</h3>
+        </div>
+        <div class="playingspace">
+            <div class="player1"
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
+                <div class="blue coin">
+                </div>
             </div>
-             <div class="blue coin">
+            <div class="board">
+                <img src="connect4.png">
             </div>
-             <div class="blue coin">
+            <div class="playertwo">
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
+                </div>
+                <div class="red coin">
             </div>
-              <div class="red coin">
-            </div>
-             <div class="red coin">
-            </div>
-             <div class="red coin">
-            </div>
-            <img src="connect4.png">
         </div>
     </body>
 
